TV Cards: Fix scrollbar always showing on hover

--- a/resources/assets/src/scss/components/_card.scss
+++ b/resources/assets/src/scss/components/_card.scss
@@ -58,7 +58,7 @@
       overflow: hidden;
 
       &:hover {
-        overflow-y: scroll;
+        overflow-y: auto;
       }
     }
 
